deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: appstore-docs
  namespace: $TARGET_PROJ
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: nginx
    app.kubernetes.io/instance: appstore-docs
