deploy/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: appstore-docs
  name: appstore-docs
  namespace: $TARGET_PROJ
spec:
  rules:
  - host: docs.assetcloud.org.cn
    http:
      paths:
      - backend:
          serviceName: appstore-docs
          servicePort: 80
        path: /
